--- a/Qwen2.5-72-ins-western.ipynb
+++ b/Qwen2.5-72-ins-western.ipynb
@@ -5,41 +5,7 @@
    "execution_count": null,
    "id": "330c7f2d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/llm-mehrnoush/MoralSense-code/Translated-Datasets/Qwen2.5-72B-NC3000-MS/english/Qwen2.5-72B_NC3000_MS_english_all.csv\n",
-      "\n",
-      "=== Running culture=english | file=English_all_ctx_english.xlsx ===\n",
-      "sheet_names ['Sheet1']\n",
-      "Columns: ['ID', 'norm', 'situation', 'intention', 'moral_action', 'moral_consequence', 'immoral_action', 'immoral_consequence', 'ExtractedNames', 'GPT_Moral_Answer', 'GPT_Answer', 'GPT_Confidence', 'GPT_Explanation', 'model_response', 'moral_action_selected', 'generated_norm', 'equivalence_score_qwen72', 'equivalence_explanation_qwen72', 'evaluator_model', 'eval_timestamp']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Qwen2.5-72B moral eval [english]: 100%|██████████| 982/982 [19:54<00:00,  1.22s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved final output to:\n",
-      "/home/llm-mehrnoush/MoralSense-code/Translated-Datasets/Qwen2.5-72B-NC3000-MS/english/Qwen2.5-72B_NC3000_MS_english_all.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
@@ -57,7 +23,7 @@
     "TAG = \"Qwen2.5-72B\"\n",
     "\n",
     "# =========================\n",
-    "# DATASETS (culture -> excel file + country)\n",
+    "# DATASETS \n",
     "# =========================\n",
     "BASE_DIR = \"../MoralSense-code/Translated-Datasets\"\n",
     "\n",
